k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: search-sre
  labels:
    app: search-api
