k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-api
  namespace: search-sre
spec:
  selector:
    app: search-api
  ports:
  - port: 8080
    targetPort: 8000
  type: ClusterIP
